tests/ui/rfcs/rfc-2093-infer-outlives/projection.stderr
error: rustc_dump_inferred_outlives
  --> $DIR/projection.rs:4:1
   |
LL | struct Foo<'a, T: Iterator> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: <T as Iterator>::Item: 'a

error: aborting due to 1 previous error

