tests/ui/rfcs/rfc-2093-infer-outlives/projection.rs
#![feature(rustc_attrs)]

#[rustc_dump_inferred_outlives]
struct Foo<'a, T: Iterator> { //~ ERROR rustc_dump_inferred_outlives
    bar: &'a T::Item
}

fn main() {}
